<resources>
    <string name="app_name">Kalikasan</string>

    <string name="my_position">Position</string>
    <string name="my_months">Month</string>
    <string name="my_years">Year</string>
    <string name="register_account">Register Account</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="position">Position</string>
    <string name="length_in_service">Length in Service</string>
    <string name="office">Office</string>
    <string name="division">Division</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="profile_data">Profile Data</string>
    <string name="user_login">User Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>

    <string-array name="Position">
        <item>Developer</item>
        <item>Programmer</item>
        <item>Debugger</item>
        <item>System Analyst</item>
    </string-array>


    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>


    <string-array name="Year">
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>

    </string-array>

    <string-array name="office">

        <item>GSD</item>
        <item>Accounting</item>
        <item>Hardware</item>
    </string-array>


    <string-array name="division">
        <item>Division1</item>
        <item>Division4</item>
        <item>Division5</item>
        <item>Division6</item>
    </string-array>


    <string name="title_activity_card_tab1">CardTab1</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_card_tab">CardTab</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questionare">Questionnaire</string>
    <string name="result">Result</string>
    <string name="previous_result">Previous Result</string>
    <string name="male">Male</string>
    <string name="submit_feedback">Submit feedback</string>
</resources>
