<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_bg"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="30dp"
            android:paddingRight="24dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/register_account"
                android:textColor="@android:color/white"
                android:textSize="23sp"
                android:textStyle="normal|bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:singleLine="false"
                    android:textSize="16sp"
                    app:fontFamily="sans-serif" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/middleName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/white"
                    android:hint="MiddleName(optional)"
                    android:inputType="text"
                    android:singleLine="false"
                    android:textSize="16sp"
                    app:fontFamily="sans-serif" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:singleLine="false"
                    android:textSize="16sp"
                    app:fontFamily="sans-serif" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/position"
                android:textSize="15sp"
                app:fontFamily="sans-serif" />


            <Spinner
                android:id="@+id/positionSpinner"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gradient_raduis"
                android:prompt="@string/my_position"
                app:fontFamily="sans-serif" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/length_in_service"
                android:textSize="15sp"
                app:fontFamily="sans-serif" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <Spinner
                    android:id="@+id/lengthSpinner1"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:background="@drawable/gradient_raduis"
                    android:entries="@string/my_months"
                    android:prompt="@string/my_months"
                    app:fontFamily="sans-serif" />

                <Spinner
                    android:id="@+id/lengthSpinner2"
                    android:layout_width="150dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/gradient_raduis"
                    android:entries="@string/my_years"
                    android:prompt="@string/my_years"
                    app:fontFamily="sans-serif" />


            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/office"
                android:textSize="15sp"
                app:fontFamily="sans-serif" />


            <Spinner
                android:id="@+id/officeSpinner"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gradient_raduis"
                android:entries="@string/office"
                app:fontFamily="sans-serif" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/division"
                android:textSize="15sp"
                app:fontFamily="sans-serif" />


            <Spinner
                android:id="@+id/divisionSpinner"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/gradient_raduis"
                android:entries="@string/division"
                app:fontFamily="sans-serif" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:text="@string/gender"
                    android:textSize="15sp"
                    app:fontFamily="sans-serif" />

                <RadioGroup
                    android:id="@+id/radioGender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:onClick="RadioButtonClick"
                    android:paddingLeft="30dp"
                    android:paddingStart="20dp"
                    tools:ignore="RtlSymmetry"
                    android:layout_marginTop="5dp">


                    <RadioButton
                        android:id="@+id/maleRadio"
                        android:layout_width="wrap_content"
                        android:onClick="RadioButtonClick"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:text="@string/male" />


                    <RadioButton
                        android:id="@+id/femaleRadio"
                        android:layout_width="wrap_content"
                        android:onClick="RadioButtonClick"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:text="Female"/>

                </RadioGroup>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/usernameText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:singleLine="false"
                    android:textSize="16sp"
                    app:fontFamily="sans-serif" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/white"
                    android:hint="@string/password"
                    android:inputType="text|textPassword"
                    android:singleLine="false"
                    android:textSize="16sp"
                    app:fontFamily="sans-serif" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordText1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/white"
                    android:hint="Confirm password"
                    android:inputType="text|textPassword"
                    android:singleLine="false"
                    android:textSize="16sp"
                    app:fontFamily="sans-serif" />

            </android.support.design.widget.TextInputLayout>


            <ProgressBar
                android:id="@+id/loading"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/registerButton"
                android:layout_width="207dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/gradient_buttondesign"
                android:text="Register"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>