<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/gradient_bg"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="48dp"
                android:layout_marginRight="40dp">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="86dp"
                    android:layout_height="85dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:adjustViewBounds="true"
                    android:background="@mipmap/denr_icon"
                    android:fitsSystemWindows="false"
                    android:scaleType="fitCenter" />

                <RelativeLayout
                    android:id="@+id/relative1"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/image1">

                    <TextView
                        android:id="@+id/loginText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="@string/user_login"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        app:fontFamily="sans-serif" />

                    <LinearLayout
                        android:id="@+id/linear1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/loginText"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/username"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                app:fontFamily="sans-serif" />

                            <EditText
                                android:id="@+id/usernameLogin"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/gradient_texteditdesign"
                                android:gravity="center"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp"
                                android:textColor="@android:color/black"
                                android:textSize="15sp"
                                app:fontFamily="sans-serif" />
                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="20dp"

                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/password"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="15sp"
                                app:fontFamily="sans-serif" />

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="10dp"
                                app:passwordToggleEnabled="true">

                                <android.support.design.widget.TextInputEditText
                                    android:id="@+id/passwordLogin"
                                    android:layout_width="match_parent"
                                    android:layout_height="40dp"
                                    android:background="@drawable/gradient_texteditdesign"
                                    android:gravity="center"
                                    android:inputType="text|textPassword"
                                    android:textSize="16sp"
                                    app:fontFamily="sans-serif" />

                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>


                    </LinearLayout>

                    <ProgressBar
                        android:id="@+id/loadingLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/linear1"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="47dp"
                        android:visibility="gone"
                        android:layout_alignParentLeft="true"
                        tools:ignore="RtlCompat" />

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_below="@id/linear1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/gradient_buttondesign"
                        android:paddingLeft="70dp"
                        android:paddingRight="70dp"
                        android:text="@string/login"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:fontFamily="sans-serif" />


                    <Button
                        android:id="@+id/signupButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_below="@id/linear1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="120dp"
                        android:background="@drawable/gradient_buttondesign"
                        android:focusable="true"
                        android:paddingLeft="65dp"
                        android:paddingRight="65dp"
                        android:text="@string/sign_up"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:fontFamily="sans-serif" />


                </RelativeLayout>


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>